# gallery-django-react

./: README.md  conftest.py  netlify.toml  pyproject.toml  pytest.ini
api/: settings.py  urls.py
authentication/: admin.py  custom_token.py  models.py  serializers.py  urls.py  utils.py  views.py
authentication/migrations/: 0001_initial.py
authentication/tests/: test_admin.py  test_models.py  test_views.py
upload/: admin.py  models.py  serializers.py  urls.py  views.py
upload/migrations/: 0001_initial.py  0002_alter_upload_image.py
web/: netlify.toml  package.json
web/public/: index.html
web/src/: index.tsx  routes.js
web/src/components/FileList/: index.tsx  styles.ts
web/src/components/Gallery/: index.tsx  styles.ts
web/src/components/Header/: index.tsx  styles.ts
web/src/components/Upload/: index.tsx  styles.ts
web/src/context/: files.tsx
web/src/pages/Home/: App.tsx  index.tsx
web/src/pages/Login/: index.tsx  styles.ts
web/src/pages/Uploads/: index.tsx  styles.ts
web/src/services/: api.ts
web/src/styles/: global.ts
