[tool.poetry]
name = "gallery-django-react"
version = "0.1.0"
description = "Galeria de imagens desenvolvida com Django e React JS."
authors = ["foschieraanderson <foschieraanderson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
djangorestframework = "^3.12.4"
django-cors-headers = "^3.7.0"
drf-yasg = "^1.20.0"
djangorestframework-jwt = "^1.11.0"
Pillow = "^8.2.0"
gunicorn = "^20.1.0"
whitenoise = "^5.2.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-django = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
